assign1/tests/type-checking/bad/types_add-var-2.c
#include "FenneC.h"

int main() {
    int x = 3;
    return 1U + x;
}